Drawing of warps and wefts.

--- a/drafting.html
+++ b/drafting.html
@@ -29,6 +29,7 @@
 	<div id="drawdown" class="draft"></div>
 	<div id="treadling" class="draft"></div>
   </div>
+  <button onclick="trompAsWrit();">Tromp as Writ</button>
   <button onclick="testSave();">Download .WIF</button>
   <div id="about">This tool uses the WIF (Weaving Information Format) specification that is common to handweaving pattern development tools. You can read more about it <a href="http://www.mhsoft.com/wif/wif1-1.txt">here</a>.</div>
 </body>
