--- a/drafting.html
+++ b/drafting.html
@@ -3,6 +3,7 @@
   <meta charset="UTF-8">
   <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/2.6.4/svg.min.js"></script>
   <script language="javascript" type="text/javascript" src="default-draft.js"></script>
+  <script language="javascript" type="text/javascript" src="heddle-pieces.js"></script>
   <script language="javascript" type="text/javascript" src="ini.js"></script>
   <script language="javascript" type="text/javascript" src="drafting.js"></script>
   <style> 
@@ -31,6 +32,9 @@
   </div>
   <button onclick="trompAsWrit();">Tromp as Writ</button>
   <button onclick="testSave();">Download .WIF</button>
+  <button onclick="renderAllFrames();">Render frames</button>
+  <button onclick="downloadFrames();">Download frames</button>
   <div id="about">This tool uses the WIF (Weaving Information Format) specification that is common to handweaving pattern development tools. You can read more about it <a href="http://www.mhsoft.com/wif/wif1-1.txt">here</a>.</div>
+  		<div id="frames"></div>
 </body>
 </html>
