hddle frames that are the right size *and* the right place

--- a/drafting.html
+++ b/drafting.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/2.6.4/svg.min.js"></script>
-  <script language="javascript" type="text/javascript" src="default-draft_bigger.js"></script>
+  <script language="javascript" type="text/javascript" src="default-draft.js"></script>
   <script language="javascript" type="text/javascript" src="heddle-pieces.js"></script>
   <script language="javascript" type="text/javascript" src="ini.js"></script>
   <script language="javascript" type="text/javascript" src="drafting.js"></script>
